--- a/MigrationService/Views/Languages/Delete.cshtml
+++ b/MigrationService/Views/Languages/Delete.cshtml
@@ -1,16 +1,16 @@
 @model MigrationService.Models.Language
 
 @{
-    ViewData["Title"] = "Delete Language";
+    ViewData["Title"] = "Удаление языка";
 }
 
 <div class="container mt-4">
     <div class="card">
         <div class="card-header">
-            <h2>Delete Language</h2>
+            <h2>Удаление языка</h2>
         </div>
         <div class="card-body">
-            <h3>Are you sure you want to delete this language?</h3>
+            <h3>Вы уверены, что хотите удалить этот язык?</h3>
             <div>
                 <dl class="row">
                     <dt class="col-sm-2">@Html.DisplayNameFor(model => model.LanguageName)</dt>
@@ -19,10 +19,10 @@
                 <form asp-action="Delete">
                     <input type="hidden" asp-for="LanguageID" />
                     <button type="submit" class="btn btn-danger">
-                        <i class="bi bi-trash"></i> Delete
+                        <i class="bi bi-trash"></i> Удалить
                     </button>
                     <a asp-action="Index" class="btn btn-secondary">
-                        <i class="bi bi-arrow-left"></i> Back to List
+                        <i class="bi bi-arrow-left"></i> Назад к списку
                     </a>
                 </form>
             </div>
