--- a/MigrationService/Views/Languages/Details.cshtml
+++ b/MigrationService/Views/Languages/Details.cshtml
@@ -1,13 +1,13 @@
 @model MigrationService.Models.Language
 
 @{
-    ViewData["Title"] = "Language Details";
+    ViewData["Title"] = "Информация о языке";
 }
 
 <div class="container mt-4">
     <div class="card">
         <div class="card-header">
-            <h2>Language Details</h2>
+            <h2>Информация о языке</h2>
         </div>
         <div class="card-body">
             <dl class="row">
@@ -15,13 +15,13 @@
                 <dd class="col-sm-10">@Html.DisplayFor(model => model.LanguageName)</dd>
             </dl>
 
-            <h3 class="mt-4">Migrants Speaking This Language</h3>
+            <h3 class="mt-4">Мигранты, владеющие этим языком</h3>
             <div class="table-responsive">
                 <table class="table table-striped">
                     <thead>
                         <tr>
-                            <th>Migrant Name</th>
-                            <th>Proficiency Level</th>
+                            <th>ФИО мигранта</th>
+                            <th>Уровень владения</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -39,10 +39,10 @@
         <div class="card-footer">
             <div class="btn-group">
                 <a asp-action="Edit" asp-route-id="@Model.LanguageID" class="btn btn-primary">
-                    <i class="bi bi-pencil"></i> Edit
+                    <i class="bi bi-pencil"></i> Редактировать
                 </a>
                 <a asp-action="Index" class="btn btn-secondary">
-                    <i class="bi bi-arrow-left"></i> Back to List
+                    <i class="bi bi-arrow-left"></i> Назад к списку
                 </a>
             </div>
         </div>
