--- a/MigrationService/Views/Officers/Delete.cshtml
+++ b/MigrationService/Views/Officers/Delete.cshtml
@@ -1,16 +1,16 @@
 @model MigrationService.Models.Officer
 
 @{
-    ViewData["Title"] = "Delete Officer";
+    ViewData["Title"] = "Удалить сотрудника";
 }
 
 <div class="container mt-4">
     <div class="card">
         <div class="card-header">
-            <h2>Delete Officer</h2>
+            <h2>Удалить сотрудника</h2>
         </div>
         <div class="card-body">
-            <h3>Are you sure you want to delete this officer?</h3>
+            <h3>Вы уверены, что хотите удалить этого сотрудника?</h3>
             <div>
                 <dl class="row">
                     <dt class="col-sm-3">@Html.DisplayNameFor(model => model.FullName)</dt>
@@ -28,10 +28,10 @@
                 <form asp-action="Delete">
                     <input type="hidden" asp-for="OfficerID" />
                     <button type="submit" class="btn btn-danger">
-                        <i class="bi bi-trash"></i> Delete
+                        <i class="bi bi-trash"></i> Удалить
                     </button>
                     <a asp-action="Index" class="btn btn-secondary">
-                        <i class="bi bi-arrow-left"></i> Back to List
+                        <i class="bi bi-arrow-left"></i> Вернуться к списку
                     </a>
                 </form>
             </div>
