--- a/MigrationService/Views/Officers/Details.cshtml
+++ b/MigrationService/Views/Officers/Details.cshtml
@@ -1,18 +1,18 @@
 @model MigrationService.Models.Officer
 
 @{
-    ViewData["Title"] = "Officer Details";
+    ViewData["Title"] = "Информация о сотруднике";
 }
 
 <div class="container mt-4">
     <div class="card">
         <div class="card-header">
-            <h2>Officer Details</h2>
+            <h2>Информация о сотруднике</h2>
         </div>
         <div class="card-body">
             <div class="row">
                 <div class="col-md-6">
-                    <h3>Personal Information</h3>
+                    <h3>Личная информация</h3>
                     <dl class="row">
                         <dt class="col-sm-4">@Html.DisplayNameFor(model => model.FullName)</dt>
                         <dd class="col-sm-8">@Html.DisplayFor(model => model.FullName)</dd>
@@ -29,15 +29,15 @@
                 </div>
             </div>
 
-            <h3 class="mt-4">Assigned Applications</h3>
+            <h3 class="mt-4">Назначенные заявки</h3>
             <div class="table-responsive">
                 <table class="table table-striped">
                     <thead>
                         <tr>
-                            <th>Migrant</th>
-                            <th>Type</th>
-                            <th>Status</th>
-                            <th>Submission Date</th>
+                            <th>Мигрант</th>
+                            <th>Тип</th>
+                            <th>Статус</th>
+                            <th>Дата подачи</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -57,10 +57,10 @@
         <div class="card-footer">
             <div class="btn-group">
                 <a asp-action="Edit" asp-route-id="@Model.OfficerID" class="btn btn-primary">
-                    <i class="bi bi-pencil"></i> Edit
+                    <i class="bi bi-pencil"></i> Редактировать
                 </a>
                 <a asp-action="Index" class="btn btn-secondary">
-                    <i class="bi bi-arrow-left"></i> Back to List
+                    <i class="bi bi-arrow-left"></i> Вернуться к списку
                 </a>
             </div>
         </div>
